<resources>
    <string name="app_name">Museum Of Me</string>
    <string name="app_logo">MOM logo</string>
    <string name="home">Home</string>
    <string name="logout">Log out</string>
    <string name="user_default_photo">User default photo</string>
    <string name="add_new">Add new</string>
    <string name="minus">—</string>
    <string name="plus">+</string>

    <!-- Strings related to Login and Signup-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_signIn">Sign in</string>
    <string name="login_signUp">No account yet? Create one</string>

    <!-- Strings related to Main-->
    <string name="main_profile">Profile</string>
    <string name="main_friends">Friends</string>
    <string name="main_diary">Diary</string>
    <string name="main_map">Map</string>
    <string name="main_movies">Movies\nand\nSeries</string>
    <string name="main_books">Books\nand\ncomics</string>

    <!-- Strings related to Profile and ProfileSettings-->
    <string name="profile_settings">Settings</string>
    <string name="profile_name">Name:</string>
    <string name="profile_age">Age:</string>
    <string name="profile_about">About me:\n</string>
    <string name="profile_header">User profile header</string>
    <string name="profile_photo">User profile photo</string>
    <string name="profile_sets_back">Back to profile</string>
    <string name="profile_sets_nickname">Nickname:</string>
    <string name="profile_sets_bio">Bio:</string>
    <string name="profile_sets_name">Name:</string>
    <string name="profile_sets_birth">Date of birth:</string>
    <string name="profile_sets_about">About me:</string>
    <string name="profile_sets_save">Save changes</string>
    <string name="profile_sets_change_photo">Change photo</string>
    <string name="profile_sets_change_header">Change header</string>

    <!-- Strings related to Friends and AddFriend-->
    <string name="friend_search">Who do you want to find?</string>
    <string name="friends_add_back">Back to friends</string>

    <!--Strings related to Diary and AddNote-->
    <string name="diary_search">Enter tag:</string>
    <string name="add_note_back">Back to diary</string>
    <string name="add_note_name">Name:</string>
    <string name="add_note_content">Content:</string>
    <string name="add_note_tag">Tags:</string>
    <string name="add_note_save">Save note</string>

    <!--String related to Map-->
    <string name="map_add_group_field">Enter group name:</string>
    <string name="map_add_group_button">Add group</string>
    <string name="map_add_place_field">Enter place and click \'+\'</string>
    <string name="map_add_place_button">Add geo</string>

    <!-- Strings related to Movies and Books -->
    <string name="interest_search">What do you want to find?</string>
    <string name="add_interest_change_photo">Change image</string>
    <string name="add_movie_back">Back to movies</string>
    <string name="add_movie_name">Enter movie name:</string>
    <string name="add_movie_author">Enter movie director:</string>
    <string name="add_interest_review">Your review:</string>
    <string name="add_interest_rating">Choose rating:</string>
    <string name="add_movie_characters">Enter actors names, use \'; \' as divider:</string>
    <string name="add_interest_save">Save</string>
    <string name="add_book_back">Back to books</string>
    <string name="add_book_name">Enter book name:</string>
    <string name="add_book_author">Enter the author name:</string>
    <string name="add_book_characters">Enter characters names, use \'; \' as divider:</string>
    <string name="view_book_name">Book name:</string>
    <string name="view_book_author">Book author:</string>
    <string name="view_book_characters">Characters:</string>
    <string name="view_interest_review">My review:</string>
    <string name="view_interest_rating">Rating:</string>
    <string name="view_movie_name">Movie name:</string>
    <string name="view_movie_author">Movie director:</string>
    <string name="view_movie_characters">Actors:</string>
    <string-array name="rating_list">
        <item>0</item>
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
    </string-array>
    <string-array name="spinner_list">
        <item>Sort by date</item>
        <item>Sort by name</item>
        <item>Sort by rating</item>
    </string-array>
</resources>
