<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="60dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:orientation="vertical"
    android:background="@drawable/user_header_default">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress|textNoSuggestions" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="Sign in"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword|textNoSuggestions" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_signIn"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/login_signUp"
        android:gravity="center"
        android:textSize="16sp" />

</LinearLayout>
