<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/user_header_default">

    <Button
        android:text="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_button_menu"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">

        <ImageView
            android:id="@+id/main_user_photo"
            android:src="@drawable/user_photo_default"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/user_default_photo" />

        <TextView
            android:id="@+id/main_user_nickname"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/main_user_photo"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/main_user_photo" />

        <TextView
            android:id="@+id/main_user_name"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_user_nickname"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/main_user_photo" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/main_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_button_profile"
                android:layout_marginEnd="20dp" />

            <Button
                android:text="@string/main_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_button_friends" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/main_diary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_button_diary"
                android:layout_marginEnd="20dp" />

            <Button
                android:text="@string/main_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_button_map" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/main_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_button_movies"
                android:layout_marginEnd="20dp" />

            <Button
                android:text="@string/main_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_button_books" />
        </TableRow>

    </TableLayout>
</LinearLayout>