<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_header_default">

    <Button
        android:text="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/books_button_menu"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <Button
            android:id="@+id/books_button_add"
            android:text="@string/add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/books_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/books_button_add"
            android:layout_marginStart="25dp"
            android:entries="@array/spinner_list"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/books_search_field"
            android:layout_below="@+id/books_button_add"
            android:hint="@string/interest_search"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:background="#fff"
            android:clickable="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/books_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
    </ScrollView>

</LinearLayout>