<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_header_default">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/user_header_default">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/friends_button_menu"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp" />

            <Button
                android:text="@string/add_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/friends_button_add"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="15dp"
                android:layout_below="@+id/friends_button_menu" />

            <EditText
                android:hint="@string/friend_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/friends_button_add"
                android:layout_toEndOf="@id/friends_button_add"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="25dp"
                android:textSize="17sp"
                android:id="@+id/friends_search_field"
                android:background="#fff"
                android:clickable="true" />

            <LinearLayout
                android:id="@+id/friends_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_below="@+id/friends_button_add"
                android:orientation="vertical">

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>