<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_header_default">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/user_header_default">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">

            <Button
                android:text="@string/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diary_button_menu"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:id="@+id/diary_user_photo"
                android:src="@drawable/user_photo_default"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/diary_button_menu"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/profile_photo" />

            <TextView
                android:id="@+id/diary_user_nickname"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/diary_user_photo"
                android:layout_marginTop="30dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/diary_user_photo" />

            <TextView
                android:id="@+id/diary_user_name"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/diary_user_nickname"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/diary_user_photo" />


            <Button
                android:text="@string/add_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diary_button_add"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/diary_user_photo" />

            <EditText
                android:id="@+id/diary_search_field"
                android:hint="@string/diary_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/diary_button_add"
                android:layout_toEndOf="@id/diary_button_add"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="25dp"
                android:textSize="17sp"
                android:background="#fff"
                android:clickable="true" />

            <LinearLayout
                android:id="@+id/diary_note_list"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/diary_button_add">


            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>